--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,8 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
-<!-- <link rel="stylesheet" href="https://w3schools.com/w3css/4/w3.css" />
-<link rel="stylesheet" href="/w3.css" /> -->
-
-
 	<script defer src='/build/bundle.js'></script>
+	<link rel='stylesheet' href='./build/bundle.css'/>
 </head>
 
 <body>
