--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
 
 	<script defer src='/build/bundle.js'></script>
 	<link rel='stylesheet' href='./build/bundle.css'/>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Neuton&display=swap" rel="stylesheet">
 </head>
 
 <body>
